--- a/roles/control-node/tasks/main.yml
+++ b/roles/control-node/tasks/main.yml
@@ -31,6 +31,7 @@
   pip:
     name:
       - ansible
+      - pywinrm
     state: latest
   register: install_ansible
   until: install_ansible|success
