--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -77,6 +77,7 @@
   pre_tasks:
     - name: wait for connection on windows nodes
       wait_for_connection:
+        delay: 60
         sleep: 15
         timeout: 900
 
