--- a/roles/control-node/tasks/main.yml
+++ b/roles/control-node/tasks/main.yml
@@ -18,6 +18,7 @@
       - git
       - python-pip
       - sshpass
+      - screen
     state: latest
     enablerepo: epel-testing
   register: install_base_packages
